Rip out some more guava uses